[tool.poetry]
name = "repl_python3_HF21"
version = "0.1.0"
description = ""
authors = ["c0a3bd <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
art = "^5.3"
ipython = "^7.29.0"
emoji = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
